--- a/index.html
+++ b/index.html
@@ -1,33 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Animated Login Form</title>
-  <link rel="stylesheet" href="style.css">
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Segoe UI", sans-serif;
+    }
+
+    body {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(135deg, #667eea, #764ba2);
+    }
+
+    .container {
+      width: 380px;
+      background: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+      animation: fadeIn 1s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+      color: #333;
+    }
+
+    .input-box {
+      margin-bottom: 15px;
+      position: relative;
+    }
+
+    .input-box input {
+      width: 100%;
+      padding: 12px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      outline: none;
+      transition: 0.3s;
+    }
+
+    .input-box input:focus {
+      border-color: #667eea;
+      box-shadow: 0 0 5px rgba(102,126,234,0.6);
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      background: #667eea;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background: #5a67d8;
+      transform: scale(1.02);
+    }
+
+    .switch {
+      text-align: center;
+      margin-top: 15px;
+      color: #555;
+    }
+
+    .switch span {
+      color: #667eea;
+      cursor: pointer;
+      font-weight: bold;
+    }
+  </style>
 </head>
+
 <body>
 
-  <h1 class="title">
-    <span>Animated</span> Login Form
-  </h1>
+  <div class="container">
+    <h2 id="formTitle">Register Now</h2>
 
-  <div class="scene">
-    <!-- Girl -->
-    <img src="girl.png" class="girl" id="girl">
-
-    <!-- Login Box -->
-    <div class="login-box" id="loginBox">
-      <h2>Register now</h2>
-      <p>Secure your spot in our upcoming live webinar</p>
-
+    <div class="input-box">
       <input type="text" placeholder="Name">
-      <input type="text" placeholder="Surname">
-      <input type="email" placeholder="Email address">
+    </div>
 
-      <button>Next</button>
+    <div class="input-box">
+      <input type="email" placeholder="Email">
+    </div>
+
+    <div class="input-box">
+      <input type="password" placeholder="Password">
+    </div>
+
+    <button>Next</button>
+
+    <div class="switch">
+      Already have an account?
+      <span onclick="toggleForm()">Login</span>
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    function toggleForm() {
+      const title = document.getElementById("formTitle");
+      if (title.innerText === "Register Now") {
+        title.innerText = "Login";
+      } else {
+        title.innerText = "Register Now";
+      }
+    }
+  </script>
+
 </body>
 </html>
